@@ -1,4 +1,4 @@
-$Id: README,v 1.2 2000-01-21 10:56:13 maire Exp $
+$Id: README,v 1.3 2001-03-27 08:58:15 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -87,7 +87,7 @@ $Id: README,v 1.2 2000-01-21 10:56:13 maire Exp $
  	
  7- HISTOGRAMS
  
-     TestEm2 produces several histo which are saved as testem2.histo
+     TestEm2 produces several histo which are saved as testem2.paw
      
      Content of these histo:
   
@@ -106,4 +106,6 @@ $Id: README,v 1.2 2000-01-21 10:56:13 maire Exp $
      10 : radial energy profile    
      11 : cumulated radial energy profile
      12 : rms of cumulated radial energy profile
-   
+    	   
+ Note that, for time being (on 26.03.2001), the histograms in G4
+ are disabled  wia the cpp flag g4nohist := true in the gnumakefile 
