@@ -1,4 +1,4 @@
-$Id: History,v 1.10 2001-03-08 14:28:13 maire Exp $
+$Id: History,v 1.11 2001-03-27 08:58:14 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+27-03-01  mma (testem2-V03-00-05)
+	  - set cppflag G4NOHIST = true in gnumakefile
      
 08-03-01  Hisaya (testem2-V03-00-04)
           - RunAction adapted for STL
